[gd_scene load_steps=3 format=3 uid="uid://cqyydvd2egukm"]

[ext_resource type="Theme" uid="uid://c8ustssjawosr" path="res://main_theme.tres" id="1_ugbu5"]
[ext_resource type="Script" path="res://multiplayer.gd" id="2_ms7bd"]

[node name="Multiplayer" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ugbu5")
theme_type_variation = &"MenuPanelContainerBackground"
script = ExtResource("2_ms7bd")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Multiplayer" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/normal_font_size = 48
text = "Multiplayer"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="LobbyBrowser" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/LobbyBrowser"]
layout_mode = 2

[node name="HBoxContainer" type="BoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Back
"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Host" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 24
text = "Host
"

[node name="Join" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 24
text = "Join"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Join" to="." method="_on_join_pressed"]
